--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <div class="calcu">
         <input id="input" readonly>
         <div id="keys">
-            <button onclick="calculator('*')" class="arith">*</button>
+            <button onclick="calculator('*')" >*</button>
             <button  onclick="calculator('9')">9</button>
             <button  onclick="calculator('8')">8</button>
             <button  onclick="calculator('7')">7</button>
-            <button  onclick="calculator('-')"  class="arith">-</button>
+            <button  onclick="calculator('-')">-</button>
             <button  onclick="calculator('6')">6</button>
             <button  onclick="calculator('5')">5</button>
             <button  onclick="calculator('4')">4</button>
-            <button onclick="calculator('+')"  class="arith" >+</button>
+            <button onclick="calculator('+')" >+</button>
             <button  onclick="calculator('3')" >3</button>
             <button  onclick="calculator('2')">2</button>
             <button  onclick="calculator('1')">1</button>
-            <button  onclick="calculator('/')" class="arith">/</button>
+            <button  onclick="calculator('/')">/</button>
             <button  onclick="calculator('0')">0</button>
             <button  onclick="calculator('.')">.</button>
             
